--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,8 @@
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
         <arguments />
         <gpg.keyname>67893CC4</gpg.keyname>
+         <sonar.organization>snehalkhairnar9</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
    
