--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,32 @@ jobs:
       - uses: actions/checkout@v2
       - name: Download Maven # Download with default JDK because OpenJDK 6 does not support TLS 1.2
         run: ./mvnw --version
-      - name: Set up JDK 6
-        if: ${{ matrix.java == '6'}}
+      - name: Set up JDK 11
+        if: ${{ matrix.java == '11'}}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
       - name: Set up JDK
-        if: ${{ matrix.java != '6'}}
-        uses: actions/setup-java@v2
+        if: ${{ matrix.java != '11'}}
+        uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar    
           distribution: temurin
           cache: maven
       - name: Build and verify
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./mvnw verify javadoc:javadoc site:site --batch-mode --errors --settings .github/workflows/settings.xml
+             ./mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Snehalkhairnar9_junit4
+        
+        
 
   publish-snapshots:
     name: Publish snapshot artifacts
@@ -43,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Download Maven # Download with default JDK because OpenJDK 6 does not support TLS 1.2
+      - name: Download Maven # Download with default JDK because OpenJDK 11 does not support TLS 1.2
         run: ./mvnw --version
       - name: Set up JDK
         uses: actions/setup-java@v1
